examples/templates/kustomize-template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: field-content-demo
  labels:
    app: field-content-demo
    demo.redhat.com/application: "field-content-demo"
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: field-content-demo
  template:
    metadata:
      labels:
        app: field-content-demo
    spec:
      containers:
      - name: demo-app
        image: registry.redhat.io/ubi8/httpd-24:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
