examples/templates/kustomize-template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: field-content-demo
  labels:
    app: field-content-demo
    demo.redhat.com/application: "field-content-demo"
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: field-content-demo
