examples/templates/kustomize-template/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
  namespace: field-content-demo
  labels:
    app: field-content-demo
    demo.redhat.com/application: "field-content-demo"
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  # Omit host to let OpenShift auto-generate based on route name and namespace
  path: /
  to:
    kind: Service
    name: service
  port:
    targetPort: 8080
  tls:
    termination: edge
